[refactor] 불필요한 하드코딩 제거